<resources>
    <string name="app_name">E Library</string>
    <string name="welcome_to_e_library">Welcome to E Library</string>
    <string name="content_add_image">content_add_image</string>
    <string name="phone_number">Phone Number</string>
    <string name="register"><u>Register Here</u></string>
    <string name="DrawerOpen">drawer open</string>
    <string name="DrawerClose">drawer close</string>
    <string name="language">language</string>
    <string name="lbl_language">Language</string>
    <string name="page">Page</string>
    <string name="size">Size</string>
    <string name="content_user_profile">user profile</string>
    <string name="username">UserName</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_phone_no">0976252112</string>
    <string name="major">Major</string>
    <string name="civil">Civil</string>
    <string name="lbl_">_</string>
    <string name="not_a_member">Not a member?</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="lbl_metallurgy_engineering">Metallurgy Engineering</string>
    <string name="lbl_information_technology">Information Technology</string>
    <string name="biotechnology">Biotechnology</string>
    <string name="nuclear_technology">Nuclear Technology</string>
    <string name="mechatronics_engineering">Mechatronics Engineering</string>
    <string name="library_logo">library logo</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_we_ll_help_you_reset_your_password">Enter your email we\'ll help you reset your password</string>
    <string name="description">TODO</string>
    <string name="password">Password</string>
    <string name="lbl_log_in">Log in</string>
    <string name="lbl_forget_password">Forget password?</string>
    <string name="filter_books_by_year">filter books by year</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_search_books">Search books</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
</resources>