<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/description"
            android:src="@drawable/reset_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/forgot_your_password"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_we_ll_help_you_reset_your_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorAccent"
            android:layout_marginTop="@dimen/margin_xxlarge"
            app:endIconMode="clear_text"
            app:startIconTint="@android:color/transparent"
            app:startIconTintMode="screen"
            app:startIconDrawable="@mipmap/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconTint="@color/secondaryTextColor"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_marginStart="@dimen/margin_medium_3">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etResetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/secondaryTextColor"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetPassword"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/margin_medium"
            app:backgroundTint="@color/colorSecondary"
            android:text="Email Me"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium_2"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>