<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MajorDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:background="@color/colorSecondary"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextColor="@color/colorPrimary"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:progressTint="@color/colorSecondary"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlSearch"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    style="@style/CustomTextInputLayoutOutlinedBox"
                    app:endIconDrawable="@drawable/search"
                    app:endIconMode="custom"
                    app:hintTextColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    app:boxCornerRadiusTopStart="@dimen/margin_medium"
                    app:boxCornerRadiusTopEnd="@dimen/margin_medium"
                    app:boxCornerRadiusBottomStart="@dimen/margin_medium"
                    app:boxCornerRadiusBottomEnd="@dimen/margin_medium">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:hint="@string/lbl_search_books"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcPoster"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="@dimen/margin_large">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivPosterImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/studying_banner" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/banner_background" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:elevation="2dp"
                    android:layout_marginStart="@dimen/margin_large"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:text="@string/lbl_information_technology"/>
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFilterBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_books_by_year"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:fontFamily="@font/ubuntu_italic"/>

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_height="@dimen/margin_50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:background="@drawable/background_spinner"
                android:elevation="6dp"
                android:entries="@array/year_list"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPdfBook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                app:spanCount="2"
                tools:itemCount="5"
                tools:listitem="@layout/viewholder_pdf_list" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>